--- a/index.html
+++ b/index.html
@@ -139,35 +139,37 @@
       <a class="anchor" id="slider"></a><!--anchor for slider-->
       <div class="photo-slider">
          <div class="wrapper">
-            <div class="slides">
-               <input type="radio" name="radio" id="r1" checked>
-               <input type="radio" name="radio" id="r2">
-               <input type="radio" name="radio" id="r3">
-               <input type="radio" name="radio" id="r4">
-               <input type="radio" name="radio" id="r5">
+            <div class="slider-block">
+               <div class="slides">
+                  <input type="radio" name="radio" id="r1" checked>
+                  <input type="radio" name="radio" id="r2">
+                  <input type="radio" name="radio" id="r3">
+                  <input type="radio" name="radio" id="r4">
+                  <input type="radio" name="radio" id="r5">
 
-               <div class="slide s1">
-                  <img src="sources/img/slide-1.jpg" alt="">
+                  <div class="slide s1">
+                     <img src="sources/img/slide-1.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                     <img src="sources/img/slide-1.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                     <img src="sources/img/slide-1.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                     <img src="sources/img/slide-1.jpg" alt="">
+                  </div>
+                  <div class="slide">
+                     <img src="sources/img/slide-1.jpg" alt="">
+                  </div>
                </div>
-               <div class="slide">
-                  <img src="sources/img/slide-1.jpg" alt="">
+               <div class="slide-bars">
+                  <label for="r1" class="bar"></label>
+                  <label for="r2" class="bar"></label>
+                  <label for="r3" class="bar"></label>
+                  <label for="r4" class="bar"></label>
+                  <label for="r5" class="bar"></label>
                </div>
-               <div class="slide">
-                  <img src="sources/img/slide-1.jpg" alt="">
-               </div>
-               <div class="slide">
-                  <img src="sources/img/slide-1.jpg" alt="">
-               </div>
-               <div class="slide">
-                  <img src="sources/img/slide-1.jpg" alt="">
-               </div>
-            </div>
-            <div class="slide-bars">
-               <label for="r1" class="bar"></label>
-               <label for="r2" class="bar"></label>
-               <label for="r3" class="bar"></label>
-               <label for="r4" class="bar"></label>
-               <label for="r5" class="bar"></label>
             </div>
          </div> 
       </div>
