--- a/index.html
+++ b/index.html
@@ -148,19 +148,19 @@
                   <input type="radio" name="radio" id="r5">
 
                   <div class="slide s1">
-                     <img src="sources/img/slide-1.jpg" alt="">
+                     <img src="sources/img/slide-1.jpg" alt="1">
                   </div>
                   <div class="slide">
-                     <img src="sources/img/slide-1.jpg" alt="">
+                     <img src="sources/img/slide-1.jpg" alt="2">
                   </div>
                   <div class="slide">
-                     <img src="sources/img/slide-1.jpg" alt="">
+                     <img src="sources/img/slide-1.jpg" alt="3">
                   </div>
                   <div class="slide">
-                     <img src="sources/img/slide-1.jpg" alt="">
+                     <img src="sources/img/slide-1.jpg" alt="4">
                   </div>
                   <div class="slide">
-                     <img src="sources/img/slide-1.jpg" alt="">
+                     <img src="sources/img/slide-1.jpg" alt="5">
                   </div>
                </div>
                <div class="slide-bars">
