--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
    <nav class="navbar">
       <div class="nav-wrap">
          <ul>
-            <li><a href="#about"><div>Про нас</div></a></li>
-            <li><a href="#team"><div>Команда</div></a></li>
-            <li><a href="#slider"><div>Галерея</div></a></li>
-            <li><a href="#price-list"><div>Ціни</div></a></li>
-            <li><a href="#contacts"><div>Контакти</div></a></li>
+            <li><div onclick="smoothScroll('about')" >Про нас</div></li>
+            <li><div onclick="smoothScroll('team')" >Команда</div></li>
+            <li><div onclick="smoothScroll('slider')" >Галерея</div></li>
+            <li><div onclick="smoothScroll('price-list')" >Ціни</div></li>
+            <li><div onclick="smoothScroll('contacts')" >Контакти</div></li>
          </ul>
       </div>
    </nav>
@@ -139,36 +139,30 @@
       <a class="anchor" id="slider"></a><!--anchor for slider-->
       <div class="photo-slider">
          <div class="wrapper">
-            <div class="slider-block">
+            <div class="slider-block" id="slider">
                <div class="slides">
-                  <input type="radio" name="radio" id="r1" checked>
-                  <input type="radio" name="radio" id="r2">
-                  <input type="radio" name="radio" id="r3">
-                  <input type="radio" name="radio" id="r4">
-                  <input type="radio" name="radio" id="r5">
-
-                  <div class="slide s1">
+                  <div class="slide" id="slide-1">
                      <img src="sources/img/slide-1.jpg" alt="1">
                   </div>
-                  <div class="slide">
+                  <div class="slide" id="slide-2">
                      <img src="sources/img/slide-1.jpg" alt="2">
                   </div>
-                  <div class="slide">
+                  <div class="slide" id="slide-3">
                      <img src="sources/img/slide-1.jpg" alt="3">
                   </div>
-                  <div class="slide">
+                  <div class="slide" id="slide-4">
                      <img src="sources/img/slide-1.jpg" alt="4">
                   </div>
-                  <div class="slide">
+                  <div class="slide" id="slide-5">
                      <img src="sources/img/slide-1.jpg" alt="5">
                   </div>
                </div>
                <div class="slide-bars">
-                  <label for="r1" class="bar"></label>
-                  <label for="r2" class="bar"></label>
-                  <label for="r3" class="bar"></label>
-                  <label for="r4" class="bar"></label>
-                  <label for="r5" class="bar"></label>
+                  <div class="bar" onclick="sliderScroll('slide-1', 'bar-1')" id="bar-1"></div>
+                  <div class="bar" onclick="sliderScroll('slide-2', 'bar-2')" id="bar-2"></div>
+                  <div class="bar" onclick="sliderScroll('slide-3', 'bar-3')" id="bar-3"></div>
+                  <div class="bar" onclick="sliderScroll('slide-4', 'bar-4')" id="bar-4"></div>
+                  <div class="bar" onclick="sliderScroll('slide-5', 'bar-5')" id="bar-5"></div>
                </div>
             </div>
          </div> 
